# mq

./: README.md
include/: mcs_common_def.h  mcs_export.h
scrpts/: profile.sh
source/: CMakeLists.txt
source/mq_common/: CMakeLists.txt  mq_id_def.h  mq_msg_def.h
source/mq_sdk/: CMakeLists.txt
source/mq_sdk/java_sdk/: CMakeLists.txt  mq_MqClass.cpp  mq_MqClass.h
source/mq_sdk/mq_c_sdk/: CMakeLists.txt  mcs_forwarder_agent.cpp  mcs_forwarder_agent.h  mcs_forwarder_agent.inl  mcs_forwarder_scheduler.cpp  mcs_forwarder_scheduler.h  mcs_forwarder_scheduler.inl  mcs_interface.cpp  mcs_interface.h  mcs_interface.inl  mq_sdk.db  mq_sdk.yaml
source/mq_sdk/mq_cpp_sdk/: CMakeLists.txt  mq_cpp_sdk_common_def.cpp  mq_cpp_sdk_common_def.h  mq_cpp_sdk_export.h  mq_cpp_sdk_interface.cpp  mq_cpp_sdk_interface.h  mq_cpp_sdk_interface.inl  mq_msg_bind.h
source/mq_server/: CMakeLists.txt
source/mq_server/mq_forwarder/: CMakeLists.txt
source/mq_server/mq_forwarder/mq_forwarder_service/: CMakeLists.txt  mq_forwarder_scheduler.cpp  mq_forwarder_scheduler.h  mq_forwarder_service.cpp  mq_forwarder_service.h  mq_forwarder_service.inl  mq_forwarder_servicee_plugin.cpp  mq_forwarder_servicee_plugin.h
source/mq_server/mq_forwarder/mq_fwd_app/: CMakeLists.txt  mq_forwarder_appmanager.cpp  mq_forwarder_appmanager.h  mq_forwarder_main.cpp  mq_fwd_app.db  mq_fwd_app.yaml
source/mq_server/mq_scheduler/: CMakeLists.txt
source/mq_server/mq_scheduler/mq_sch_app/: CMakeLists.txt  mq_sch_app.yaml  mq_scheduler_appmanager.cpp  mq_scheduler_appmanager.h  mq_scheduler_main.cpp
source/mq_server/mq_scheduler/mq_scheduler_service/: CMakeLists.txt  mq_scheduler_service.cpp  mq_scheduler_service.h  mq_scheduler_service_plugin.cpp  mq_scheduler_service_plugin.h
source/test_mq/: CMakeLists.txt
source/test_mq/cpp_test_mq_comm/: cpp_test_mq_msg.h
source/test_mq/java_test_1/: CMakeLists.txt
source/test_mq/java_test_1/mq/: MqClass.java
source/test_mq/java_test_2/: CMakeLists.txt
source/test_mq/java_test_2/mq/: MqClass.java
source/test_mq/test_cpp_mq_1/: CMakeLists.txt  test_cpp_mq_1_main.cpp
source/test_mq/test_cpp_mq_2/: CMakeLists.txt  test_cpp_mq_2_main.cpp
source/test_mq/test_dm_1/: CMakeLists.txt  test_dm_1_main.c
source/test_mq/test_dm_2/: CMakeLists.txt  test_dm_2_main.c
source/test_mq/test_mq_1/: CMakeLists.txt  test_mq_1_main.c
source/test_mq/test_mq_2/: CMakeLists.txt  test_mq_2_main.c
